# flight

./: .gitignore  CMakeLists.blast  CMakeLists.txt  README.md  VR_LUT_fpa1k.txt  VR_LUT_fpa250.txt  VR_LUT_fpa350.txt  VR_LUT_fpa500.txt  VR_LUT_he3fridge.txt  VR_LUT_he4pot.txt  VR_LUT_plate1k.txt  VR_LUT_strap300mk.txt  Vbias_Calibration_Data.txt  Vbias_LUT.txt  check_commanding.py  check_formatfile.sh  groundhog.c  groundhog.h  groundhog_funcs.c  groundhog_funcs.h  install_and_restart_mcp.sh  install_scripts.sh  linklist.c  linklist.h  linklist_compress.c  linklist_compress.h  linklist_connect.c  linklist_connect.h  linklist_writer.c  linklist_writer.h  main.c  main_blast.c  main_blast.h  mole.c  optimize_kid_setup.kst  palestine_testing_2018.kst  pilot.c  restart_blastgs.sh  restart_blastgs_ldb.sh  stop_blast_fcs.sh  (+5 more)
bit/: CMakeLists.txt  main.c  pilot.c
bitcmd/: Makefile.am  README  bitcmd.c  bitdaemon.c  bitdaemon.h  blastcmd.auth.orig  configure.ac  receive_server.c
blast/: .groundhog.h.swp  .main.c.swp  CMakeLists.txt  biphase.c  groundhog.h  groundhog_biphase.c  groundhog_highrate.c  groundhog_pilot.c  highrate.c  main.c  pilot.c
blast_etc/: 0.aml  1.aml  Makefile  Makefile.am  Makefile.in  R_N17.txt  Thermistor_RtoT.LUT  Thermistor_VtoR.lut  VR_LUT_fpa350.txt  VR_LUT_he4pot.txt  VR_LUT_plate1k.txt  VR_LUT_strap300mk.txt  charcoal_hs.txt  clin_elev.lut  clino_tng.lut  dt-simonchase.txt  dt600.txt  dt670_orig.text  ephem.2000  happy.mid.sch  happy.north.sch  happy.south.sch  hwpr_pot.lut  mag.lut  rox-500.txt  rox-he3.lut  rox-he3.txt  rox-raw.txt  rox102a.txt  rox102a23.txt  rox102a3.txt  sad.mid.sch  sad.north.sch  sad.south.sch  sched.library  ss.lut  thermistor.lut
blast_etc/udev/: 90-gpio.rules  91-serial.rules
blastcmd/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.config  Makefile.in  README  blastcmd  blastcmd-authorize  blastcmd-authorize.in  blastcmd-remote.in  blastcmd.auth.orig  blastcmd.c  bootstrap.sh  command_list.c  command_list.h  command_list_blast.c  command_list_blast.h  command_list_mini.c  command_list_mini.h  command_list_spider.c  command_list_spider.h  config.h.in  configure  configure.ac  configure.in  configure.legacy  daemon.c  daemon.h  elog.c  elog.h  fifocmd  isc_protocol.h  log.txt  netcmd.c  paramdefs.c  test.cs
blastcmd/scripts/: maltese.bash  newraster.bash  raster.bash
blastcmd/share/: netcmd.h
common/linklist/: CMakeLists.txt  FIFO.c  FIFO.h  bitserver.c  bitserver.h  linklist.c  linklist.h  linklist_compress.c  linklist_compress.h  linklist_writer.c  linklist_writer.h  pilot_gnd_test.c  test.ll
defile/: ChangeLog  Makefile  Makefile.am  Makefile.in  bolo_lookup  bootstrap.sh  client.c  config.h.in  configure  configure.ac  configure.in  defile.1  defile.1.in  defile.1.in.in  defile.c  defile.conf.in  defile.conf.in.in  defile.h  fixup.sh  frameread.c  frameread.h  quendiclient.c  quenya.h  reader.c  writer.c
defile/etc/: Makefile.am
defile/share/: blast.h  channels.c  channels.h  crc.c  crc.h  derived.h
defricher/: CMakeLists.txt  defricher.c  defricher.h  defricher_data.h  defricher_netreader.c  defricher_netreader.h  defricher_utils.c  defricher_utils.h  defricher_writer.c  defricher_writer.h  dirfile_writer.c
external_libs/katcp/: API  CMakeLists.txt  dbase.c  dpx-core.c  dpx-forward.c  dpx-mgmt.c  event.c  katcp.h  katpriv.h  parse.c
external_libs/socat/: CMakeLists.txt  Makefile.in  configure
external_libs/soem/: CMakeLists.txt
groundhog/: .groundhog.c.swp  .groundhog_biphase.c.swp  .groundhog_highrate.c.swp  .groundhog_pilot.c.swp  CMakeLists.txt  groundhog.c  groundhog.h  groundhog_biphase.c  groundhog_framing.c  groundhog_framing.h  groundhog_funcs.c  groundhog_funcs.h  groundhog_highrate.c  groundhog_pilot.c  groundhog_tdrss.c  groundhog_trdrss.c
groundhog/bit/: CMakeLists.txt  groundhog.h  main.c  pilot.c
groundhog/blast/: CMakeLists.txt  biphase.c  highrate.c  main.c  pilot.c
liblinklist/: CMakeLists.txt  linklist.c  linklist.h  linklist_compress.c  linklist_compress.h  linklist_connect.c  linklist_connect.h  linklist_writer.c  linklist_writer.h
mcp/: .gitignore  .mcp.c.swp  .tx.c.swp  0.al  0.aml  1.aml  CMakeLists.txt  Makefile  actuators.c  adamdom.cpp  adamdom.h  alice.cpp  alice.h  alicefile.cpp  alicefile.h  amccommand.c  amccommand.h  auxiliary.c  chrgctrl.c  chrgctrl.h  command_list.c  command_list.h  command_struct.h  commands.c  commands.h  compressstruct.c  configure  copleycommand.c  copleycommand.h  das.c  dataholder.cpp  dataholder.h  derived.c  dgps.c  dirfile.c  doMcp  doSensors  ezstep.c  ezstep.h  fftsg_h.c  (+41 more)
mcp/commanding/: CMakeLists.txt  command_struct.h  commands.c
mcp/communications/: .bi0.c.swp  CMakeLists.txt  bi0.c  biphase_hardware.c  blast_comms.c  blast_comms_internal.h  blast_sip_interface.c  blast_sip_interface_internal.h  highrate.c  highrate.h  pilot.c  tdrss_hga.c  tdrss_hga.h
mcp/diskmanager/: .diskmanager_tng.c.swp  CMakeLists.txt  diskmanager.c  diskmanager.h  diskmanager_tng.c  file_buffer.c  file_buffer.h  file_buffer_tng.c  store_data.c
mcp/etc/: 0.aml  1.aml  Makefile  Makefile.am  Makefile.in  WMM.COF  clin_elev.lut  dt600.txt  happy.mid.sch  happy.north.sch  happy.south.sch  mag.lut  rox102a4.txt  rox102a6.txt  sad.mid.sch  sad.north.sch  sad.south.sch  sched.library  (+1 more)
mole/: .gitignore  CMakeLists.txt  mole.c
narsil/: ChangeLog  Makefile  Makefile.am  Makefile.config  Makefile.in  README  bootstrap.sh  config.h.in  configure  configure.ac  configure.in
palantir/: ChangeLog  Makefile  Makefile.am  Makefile.config  Makefile.in  README  bootstrap.sh  config.h.in  configure  configure.ac  configure.in
spider_etc/: 0.aml.hold  001.bset  001.fset  002.bset  011.bset  012.bset  013.bset  014.bset  021.bset  022.bset  023.bset  024.bset  031.bset  032.bset  033.bset  034.bset  041.bset  042.bset  043.bset  044.bset  051.bset  052.bset  053.bset  054.bset  061.bset  062.bset  063.bset  064.bset  100.bset  101.bset  102.bset  103.bset  104.bset  105.bset  106.bset  D6031471.lut  D6031481.lut  D6031785.lut  D6031960.lut  D6032131.lut  (+69 more)
(+1949 files in other folders)
